--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,8 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    retu"
+    "    return len(restaurant[\n",
+    "    ])"
    ]
   },
   {
