automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -483,8 +483,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, rating):\n",
-    "    return len(restaurant['price']) > rating\n",
-    "    ])"
+    "    return restaurant['rating'] > rating"
    ]
   },
   {
